<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="224dp"
        tools:layout_editor_absoluteY="332dp"
        android:stretchColumns="*"
        android:padding="15dp">

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:padding="0dp">

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="4"
                android:background="@drawable/screen"
                android:fontFamily="sans-serif-black"
                android:hint="@string/zero"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="20dp"
                android:textAlignment="viewEnd"
                android:textColor="@color/deep_grey"
                android:textColorHint="@color/deep_grey"
                android:textSize="20pt" />
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/ac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/control_button"
                android:fontFamily="sans-serif-black"
                android:onClick="clickButton"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:tag="@string/ac"
                android:text="@string/ac"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15pt" />

            <TextView
                android:id="@+id/del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/control_button"
                android:fontFamily="sans-serif-black"
                android:onClick="clickButton"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:tag="@string/del"
                android:text="@string/del"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15pt" />

            <TextView
                android:id="@+id/percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/calculate_button"
                android:fontFamily="sans-serif-black"
                android:onClick="clickButton"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:tag="@string/percent"
                android:text="@string/percent"
                android:textAlignment="center"
                android:textColor="@color/deep_grey"
                android:textSize="15pt" />

            <TextView
                android:id="@+id/division"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/calculate_button"
                android:fontFamily="sans-serif-black"
                android:onClick="clickButton"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:tag="@string/division"
                android:text="@string/division"
                android:textAlignment="center"
                android:textColor="@color/deep_grey"
                android:textSize="15pt" />

        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/number_button"
                android:fontFamily="sans-serif-black"
                android:onClick="clickButton"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:tag="@string/seven"
                android:text="@string/seven"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15pt" />

            <TextView
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/number_button"
                android:fontFamily="sans-serif-black"
                android:onClick="clickButton"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:tag="@string/eight"
                android:text="@string/eight"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15pt" />

            <TextView
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/number_button"
                android:fontFamily="sans-serif-black"
                android:onClick="clickButton"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:tag="@string/nine"
                android:text="@string/nine"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15pt" />

            <TextView
                android:id="@+id/multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/calculate_button"
                android:fontFamily="sans-serif-black"
                android:onClick="clickButton"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:tag="@string/multiply"
                android:text="@string/multiply"
                android:textAlignment="center"
                android:textColor="@color/deep_grey"
                android:textSize="15pt" />
        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/number_button"
                android:fontFamily="sans-serif-black"
                android:onClick="clickButton"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:tag="@string/four"
                android:text="@string/four"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15pt" />

            <TextView
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/number_button"
                android:fontFamily="sans-serif-black"
                android:onClick="clickButton"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:tag="@string/five"
                android:text="@string/five"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15pt" />

            <TextView
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/number_button"
                android:fontFamily="sans-serif-black"
                android:onClick="clickButton"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:tag="@string/six"
                android:text="@string/six"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15pt" />

            <TextView
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/calculate_button"
                android:fontFamily="sans-serif-black"
                android:onClick="clickButton"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:tag="@string/minus"
                android:text="@string/minus"
                android:textAlignment="center"
                android:textColor="@color/deep_grey"
                android:textSize="15pt" />
        </TableRow>

        <TableRow
            android:id="@+id/row5"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/number_button"
                android:fontFamily="sans-serif-black"
                android:onClick="clickButton"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:tag="@string/one"
                android:text="@string/one"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15pt" />

            <TextView
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/number_button"
                android:fontFamily="sans-serif-black"
                android:onClick="clickButton"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:tag="@string/two"
                android:text="@string/two"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15pt" />

            <TextView
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/number_button"
                android:fontFamily="sans-serif-black"
                android:onClick="clickButton"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:tag="@string/three"
                android:text="@string/three"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15pt" />

            <TextView
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/calculate_button"
                android:fontFamily="sans-serif-black"
                android:onClick="clickButton"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:tag="@string/plus"
                android:text="@string/plus"
                android:textAlignment="center"
                android:textColor="@color/deep_grey"
                android:textSize="15pt" />
        </TableRow>

        <TableRow
            android:id="@+id/row6"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_span="2"
                android:background="@drawable/number_button"
                android:fontFamily="sans-serif-black"
                android:onClick="clickButton"
                android:paddingStart="20dp"
                android:paddingTop="15dp"
                android:paddingEnd="0dp"
                android:paddingBottom="15dp"
                android:tag="@string/zero"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="15pt" />

            <TextView
                android:id="@+id/dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/number_button"
                android:fontFamily="sans-serif-black"
                android:onClick="clickButton"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:tag="@string/dot"
                android:text="@string/dot"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15pt" />

            <TextView
                android:id="@+id/equal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/calculate_button"
                android:fontFamily="sans-serif-black"
                android:onClick="clickButton"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:tag="@string/equal"
                android:text="@string/equal"
                android:textAlignment="center"
                android:textColor="@color/deep_grey"
                android:textSize="15pt" />
        </TableRow>
    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey_opaque"
        android:onClick="closeWelcomeScreen"
        android:visibility="invisible">

        <TextView
            android:id="@+id/editTextTextPersonName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/welcome_screen"
            android:ems="10"
            android:padding="20dp"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>